# DCBOT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bot  dpp.deb
libs/DPP/: CMakeLists.txt
src/: bot.cpp  bot.hpp
